# pympp

./: .gitignore  AUDIT-REPORT.md  AUDIT-SDK-SPEC-COMPLIANCE.md  CHANGELOG.md  CODE_REVIEW.md  DOCUMENTATION_AUDIT.md  Makefile  PLAN_STREAM.md  README.md  docker-compose.yml  pyproject.toml  transferWithMemo-fix-summary.txt
.changelog/: aged-snails-eat.md  atomic-charge-replay.md  big-birds-laugh.md  big-trees-clean.md  bright-foxes-glow.md  brisk-wolves-track.md  calm-trees-sleep.md  config.toml  cool-clams-whisper.md  cute-stars-play.md  dark-deer-wink.md  dry-geese-growl.md  dull-frogs-paint.md  eager-winds-fly.md  easy-bats-bark.md  easy-rocks-meow.md  explicit-intents.md  fair-clouds-run.md  fair-donkeys-nod.md  fix-accept-transfer-with-memo.md  fix-inline-publish.md  fix-publish-python-version.md  fix-pull-mode-attribution-memo.md  gentle-crows-run.md  gentle-eagles-whisper.md  happy-dogs-cry.md  happy-owls-fly.md  happy-whales-eat.md  hash-credential-source-validation.md  initial-release.md  keen-slugs-slide.md  kind-pigs-pack.md  kind-sharks-shout.md  lively-frogs-sleep.md  lively-hawks-bark.md  lively-hills-draw.md  lively-horses-nod.md  merry-dogs-run.md  merry-snails-jump.md  merry-wolves-dry.md  (+29 more)
.github/: dependabot.yml
.github/workflows/: changelog.yml  ci.yml  conformance.yml  pr-audit.yml  publish.yml
docs/: SDK_COMPARISON_REPORT.md  SDK_SPEC_COMPLIANCE_REPORT.md
examples/: README.md  custom-intents.md  fastapi-server.md  httpx-client.md  mcp-server.md  starlette-server.md
examples/api-server/: README.md  pyproject.toml  server.py
examples/fetch/: README.md  fetch.py  pyproject.toml
examples/mcp-server/: README.md  client.py  pyproject.toml  server_decorator.py  server_manual.py
examples/stream-server/: .env  README.md  client.py  pyproject.toml  server.py
examples/stripe/: README.md  client.py  pyproject.toml  server.py
src/mpay/: __init__.py  _parsing.py  _units.py
src/mpay/client/: __init__.py  transport.py
src/mpay/extensions/: __init__.py
src/mpay/extensions/mcp/: __init__.py  decorator.py  errors.py  types.py  verify.py
src/mpay/mcp/: __init__.py  decorator.py  errors.py  types.py  verify.py
src/mpay/methods/tempo/: __init__.py  _attribution.py  _defaults.py  _rpc.py  account.py  client.py  intents.py  keychain.py  schemas.py
src/mpay/methods/tempo/stream/: __init__.py  chain.py  errors.py  receipt.py  storage.py  types.py  voucher.py
src/mpay/server/: __init__.py  _defaults.py  decorator.py  intent.py  method.py  mpay.py  verify.py
src/mpp/: __init__.py  _body_digest.py  _defaults.py  _expires.py  _lazy_exports.py  _parsing.py  _units.py  errors.py  events.py  store.py
src/mpp/client/: __init__.py  transport.py
src/mpp/extensions/: __init__.py
src/mpp/extensions/mcp/: __init__.py  __init__.pyi  capabilities.py  client.py  constants.py  decorator.py  errors.py  types.py  verify.py
src/mpp/methods/: __init__.py
src/mpp/methods/stripe/: __init__.py  _defaults.py  client.py  intents.py  schemas.py
src/mpp/methods/tempo/: __init__.py  __init__.pyi  _attribution.py  _defaults.py  _rpc.py  account.py  client.py  fee_payer_envelope.py  fee_payer_policy.py  intents.py  keychain.py  schemas.py  testnet.py
src/mpp/methods/tempo/session/: __init__.py  chain.py  intent.py  storage.py  types.py  voucher.py
src/mpp/server/: __init__.py  _defaults.py  decorator.py  intent.py  method.py  mpp.py  verify.py
src/mpp/stores/: __init__.py  __init__.pyi  redis.py  sqlite.py
tests/: __init__.py  _session_helpers.py  conftest.py  test_attribution.py  test_audit_fixes.py  test_body_digest.py  test_challenge_id.py  test_client.py  test_client_integration.py  test_errors.py  test_events.py  test_expires.py  test_fee_payer_envelope.py  test_import_isolation.py  test_keychain.py  test_mcp.py  test_mcp_client.py  test_mpay_create.py  test_mpp_create.py  test_optional_deps.py  test_parsing.py  test_server.py  test_session_intent.py  test_session_storage.py  test_session_types.py  test_session_voucher.py  test_store.py  test_stores_redis.py  test_stores_redis_integration.py  test_stores_sqlite.py  test_stores_wiring.py  test_stream.py  test_stream_integration.py  test_stripe.py  test_tempo.py  test_tempo_integration.py  test_tempo_testnet.py  test_units.py
