[project]
name = "pympp"
version = "0.1.2"
description = "HTTP 402 Payment Authentication for Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]
authors = [
    {name = "Tempo"}
]
license = {text = "MIT OR Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/tempoxyz/pympp"
Documentation = "https://github.com/tempoxyz/pympp#readme"

[project.optional-dependencies]
tempo = [
    "pytempo>=0.2.1",
    "pydantic>=2.0",
]
server = ["pydantic>=2.0", "python-dotenv>=1.0"]
mcp = ["mcp>=1.1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.0",
    "ruff>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.36.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mpp"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
